[Agrim]ADD: Swagger Implementations in API's  and did some final checks.
